--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -222,3 +222,9 @@ context.appStyle = com.axelor.apps.base.service.app.AppBaseService:getCustomStyl
 # Enable globally AOS API calls
 # Defaults to false: no AOS API calls wil be successful
 aos.api.enable = false
+
+# xgtool
+xgtool.name=custom-model
+xgtool.path=com.axelor.apps.custom.db
+xgtool.generate_path=modules/axelor-open-suite/axelor-models/src/main/resources
+context.xgtool=custom-model
