--- a/src/main/resources/axelor-config.properties
+++ b/src/main/resources/axelor-config.properties
@@ -8,9 +8,9 @@
 # ~~~~~
 db.default.driver = org.postgresql.Driver
 db.default.ddl = update
-db.default.url = jdbc:postgresql://localhost:5432/axelor-open-suite
-db.default.user = axelor
-db.default.password = *****
+db.default.url = jdbc:postgresql://localhost:5432/postgres
+db.default.user = postgres
+db.default.password = postgres
 
 # Shared cache mode settings (ALL, DISABLE_SELECTIVE, ENABLE_SELECTIVE, NONE)
 javax.persistence.sharedCache.mode = ENABLE_SELECTIVE
@@ -61,7 +61,7 @@ application.mode = dev
 #application.theme = modern
 
 # Default Locale (en, fr, fr_FR, en_US)
-application.locale = fr
+application.locale = en
 
 # Base url of the application.
 #application.base-url =
@@ -243,16 +243,16 @@ data.import.demo-data = false
 # ~~~~~
 
 # Comma-separated list of origins to allow
-#cors.allow-origin = *
+cors.allow-origin = *
 
 # whether credentials are supported
-#cors.allow-credentials = true
+cors.allow-credentials = true
 
 # Comma-separated list of methods to allow
-#cors.allow-methods = GET,PUT,POST,DELETE,HEAD,OPTIONS
+cors.allow-methods = GET,PUT,POST,DELETE,HEAD,OPTIONS
 
 # Comma-separated list of headers to allow in a request
-#cors.allow-headers = Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers
+cors.allow-headers = Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers
 
 # how long the response from a pre-flight request can be cached by clients
 #cors.max-age =
@@ -273,10 +273,10 @@ context.app = com.axelor.studio.app.service.AppService
 # Quartz Scheduler
 
 # Whether to enable quartz scheduler
-#quartz.enable = true
+quartz.enable = true
 
 # Total number of threads in quartz thread pool
-#quartz.thread-count = 3
+quartz.thread-count = 3
 
 # Auth
 # ~~~~~
@@ -309,7 +309,7 @@ context.app = com.axelor.studio.app.service.AppService
 #auth.logout.central = false
 
 # enable indirect and/or direct basic auth
-#auth.local.basic-auth = indirect, direct
+auth.local.basic-auth = indirect, direct
 
 
 # Google OpenID Connect
@@ -494,14 +494,14 @@ utils.api.enable = true
 # Examples
 # Every module : all
 # List of module : base,sale,account
-# studio.apps.install = base,sale,account
+studio.apps.install = all
 
 # OpenAPI
 # The OpenAPI JSON can be accessed with this request : /ws/aos/openapi
 # ~~~~~~
 
 # Enable OpenAPI Generation
-#aos.swagger.enable = true
+aos.swagger.enable = true
 
 # Name of the packages containing the API endpoints must be specified
 #aos.swagger.resource-packages = com.axelor.apps.production.rest, com.axelor.apps.stock.rest
